--- a/external/CMakeLists.txt
+++ b/external/CMakeLists.txt
@@ -2,6 +2,8 @@ if(MSVC AND NOT "${MSVC_VERSION}" LESS 1400)
 	add_definitions("/MP")
 endif()
 
+add_definitions(-DGLEW_STATIC)
+
 ### GLFW ###
 
 add_subdirectory (glfw)
